finish lightnovel plugin